Completed Sandwich Project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
 
     <!-- Error messages-->
     <string name="detail_error_message">Sandwich data not available</string>
+    <string name="data_unavailable">Data Not Available</string>
+    <string name="gradient">Gradient</string>
 
     <string-array name="sandwich_names">
         <item>Ham and cheese sandwich</item>
